--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<li class="nav-item"><a class="nav-link" href="sub-paginas/lavado-de-manos.html">Lavado de manos</a></li>
 	<li class="nav-item"><a class="nav-link" href="sub-paginas/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
 	<li class="nav-item"><a class="nav-link" href="sub-paginas/telefonos-contactos-ayuda.html">Télefonos y contactos de ayuda</a></li>
-        <li class="nav-item"><a class="nav-link" href="quiz.html">QUIZ</a></li>
+        <li class="nav-item"><a class="nav-link" href="sub-paginas/quiz.html">QUIZ</a></li>
 </ul>
 	<h1 class="p-4 bg-dark text-white">Coronavirus (covid-19)</h1>
 <div class="container">
